--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,6 @@ functional_tests/__pycache__/
 __pycache__
 *.pyc
 db.sqlite3
+deploy_tools/fabfile.pyc
+functional_tests/__pycache/
+lists/__pycache/
